--- a/views/layout/index.html
+++ b/views/layout/index.html
@@ -1,32 +1,24 @@
 <!DOCTYPE html>
-<html ng-app="nodeAngularDemoApp" ng-controller="RouteChangeCtrl">
+<html ng-app="nodeAngularDemoApp">
 <head>
-    <title>Salary Cap App</title>
+    <title>Node Angular Demo App</title>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-    <meta name="description" content="NFL Salary Cap Simulator">
-    <meta name="keywords" content="NFL Salary Cap Football Franchise Sports Ravens Cowboys Packers Money">
-    <meta name="author" content="Lance Fallon">
-    <script src="bower/jquery/dist/jquery.min.js" type="text/javascript"></script>
-    <script src="bower/angular/angular.min.js" type="text/javascript"></script>
-    <script src="bower/angular-route/angular-route.min.js" type="text/javascript"></script>
-    <script src="bower/angular-resource/angular-resource.min.js" type="text/javascript"></script>
-    <script src="bower/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="bower/angular-bootstrap/ui-bootstrap.min.js" type="text/javascript"></script>
-    <script src="bower/angular-bootstrap/ui-bootstrap-tpls.min.js" type="text/javascript"></script>
-    <script src="bower/bootstrap-multiselect/dist/js/bootstrap-multiselect.js" type="text/javascript"></script>
-    <script src="bower/lodash/lodash.js" type="text/javascript"></script>
-    <script src="bower/angularjs-dropdown-multiselect/dist/angularjs-dropdown-multiselect.min.js" type="text/javascript"></script>
-    <script src="/static/js/app.js" type="text/javascript"></script>
+
+    <!-- Dependencies -->
+    <script src="/bower/angular/angular.min.js" type="text/javascript"></script>
+    <script src="/bower/angular-route/angular-route.min.js" type="text/javascript"></script>
+
+    <!-- Angular main -->
+    <script src="/static/angular/nodeAngularDemoApp.js" type="text/javascript"></script>
+
+    <!-- Controllers -->
+    <script src="/static/angular/controllers/homeController.js" type="text/javascript"></script>
+    <script src="/static/angular/controllers/usersController.js" type="text/javascript"></script>
 </head>
 <body>
 <div class="container">
     <!-- Views -->
-    <div ng-view </div>
-</div>
-<hr>
-<div class="footer">
-    <p>Contract data courtesy of Jason Fitzgerald at <a href="http://overthecap.com/"><img id="otclogo" src="app/images/otc-logo.png" /></a>
-    <p>Lance Fallon | <a href="mailto:LFallon@NflCapSimulator.com">LFallon@NflCapSimulator.com</a> | 2015</p>
+    <div ng-view></div>
 </div>
 </body>
 </html>
