--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -5,6 +5,8 @@ block body
 
     script(src='bower/angular/angular.js')
     script(src='bower/angular-ui-router/release/angular-ui-router.js')
+    script(src='bower/angular-resource/angular-resource.js')
+    script(src='static/app/services/restServices.js')
     script(src='static/app/nodeAngularDemoApp.js')
     script(src='static/app/controllers/homeController.js')
     script(src='static/app/controllers/usersController.js')
