add http requ to resolve block in stateProvider routing setup

--- a/server/views/partials/home.jade
+++ b/server/views/partials/home.jade
@@ -1,2 +1,8 @@
 h1 {{pageTitle}}
+
+div
+    ul
+        li(ng-repeat='user in users')
+            span {{user.name}} - {{user.age}}
+
 a(href='', ng-click='linkMembers()') Members
