open links in new tab

--- a/server/views/partial/home.html
+++ b/server/views/partial/home.html
@@ -39,7 +39,7 @@
                     <td>{{video.likes}}</td>
                     <td>{{video.dislikes}}</td>
                     <td class="image-title-cell">
-                        <a ng-href="{{'https://www.youtube.com/watch?v=' + video.videoId}}">
+                        <a ng-href="{{'https://www.youtube.com/watch?v=' + video.videoId}}" target="_blank">
                             <img src="{{video.thumbnail.url}}" width="250px" class="thumbnail" />
                         </a>
                         <div class="videoTitle">{{video.title}}</div>
