--- a/server/views/partial/home.html
+++ b/server/views/partial/home.html
@@ -1,3 +1,7 @@
+<div class="page-header">
+    <h1>YouTube Search <small>A better search is all</small></h1>
+</div>
+
 <div id="input-container" class="row">
 
     <div id="textbox-container" class="form-group col-md-4">
@@ -6,47 +10,54 @@
             <div id="searchButton" ng-if="!fetching" class="notta-button input-group-addon" ng-click="doSearch()"><span class="glyphicon glyphicon-search"></span>Search</div>
             <div id="stopButton" ng-if="fetching" class="notta-button input-group-addon" ng-click="interrupt()"><span class="glyphicon glyphicon-stop"></span></div>
         </div>
-        <div id="status-container" class="text-center">
-            <h4 ng-if="searchResults.length > 0" class="text-success">{{searchResults.length}} results</h4>
-        </div>
     </div>
-    <div id="minDislikesContainer" class="form-group col-md-3">
-        <div class="input-group">
-            <div class="input-group-addon"><span class="glyphicon glyphicon-filter"></span></div>
-            <input class="form-control" ng-model="minDislikes" type="text" ng-keyup="filter()" />
-            <div class="input-group-addon">min dislikes</div>
-        </div>
+    <div id="search-results-label-container" ng-if="searchResults.length > 0" class="form-group col-md-3">
+        <div id="search-results-header">Search results: <span id="totalResults">{{searchResults.length}}</span></div>
+    </div>
+</div>
+
+<div class="row">
+    <div id="sort-options" class="col-md-6">
+        <div id="filter-by-label">Sort by: </div>
+        <div ng-class="{isActive : sortField === 'viewCount'}" class="clickable" ng-click="sort('viewCount', -1)"><span class="glyphicon glyphicon-user"></span>Views</div>
+        <div ng-class="{isActive : sortField === 'likes'}" class="clickable" ng-click="sort('likes', -1)"><span class="glyphicon glyphicon-thumbs-up"></span>Likes</div>
+        <div ng-class="{isActive : sortField === 'dislikes'}" class="clickable" ng-click="sort('dislikes', 1)"><span class="glyphicon glyphicon-thumbs-down"></span>Dislikes</div>
+    </div>
+</div>
+
+<div id="minDislikesContainer" class="row">
+    <div class="input-group col-md-3">
+        <div class="input-group-addon"><span class="glyphicon glyphicon-filter"></span></div>
+        <input class="form-control" ng-model="minDislikes" type="text" ng-keyup="filter()" />
+        <div class="input-group-addon">min dislikes</div>
     </div>
 </div>
 
 <!--ng-if="fetching"-->
 
-
-<div id="resultsTable" class="row">
-    <div class="col-md-8">
-        <table class="table table-responsive">
-            <thead>
-            <tr>
-                <th class="clickable" ng-click="sort('viewCount', -1)">Views</th>
-                <th class="clickable" ng-click="sort('likes', -1)">Likes</th>
-                <th class="clickable" ng-click="sort('dislikes', 1)">Dislikes</th>
-                <th></th>
-            </tr>
-            </thead>
-            <tbod>
-                <tr ng-repeat="video in searchResults">
-                    <td>{{video.viewCount}}</td>
-                    <td>{{video.likes}}</td>
-                    <td>{{video.dislikes}}</td>
-                    <td class="image-title-cell">
+<div id="results" class="row" ng-if="searchResults.length > 0">
+    <div class="col-md-6">
+        <table class="table">
+            <tbody>
+            <tr ng-repeat="video in searchResults">
+                <td>
+                    <div class="video-image-container">
                         <a ng-href="{{'https://www.youtube.com/watch?v=' + video.videoId}}" target="_blank">
                             <img src="{{video.thumbnail.url}}" width="250px" class="thumbnail" />
                         </a>
+                    </div>
+                </td>
+                <td>
+                    <div class="video-details-container">
                         <div class="videoTitle">{{video.title}}</div>
-                        <div class="rating"><strong>Rating</strong> {{video.pctLikes}}%</div>
-                    </td>
-                </tr>
-            </tbod>
+                        <div class="rating"><small>Rating</small> {{video.pctLikes | number:2}}%</div>
+                        <div class="view-count"><small>Views</small> {{video.viewCount}}</div>
+                        <div class="likes"><small>Likes</small> {{video.likes}}</div>
+                        <div class="dislikes"><small>Dislikes</small> {{video.dislikes}}</div>
+                    </div>
+                </td>
+            </tr>
+            </tbody>
         </table>
     </div>
 </div>
