--- a/server/views/index.html
+++ b/server/views/index.html
@@ -19,6 +19,9 @@
     <!-- controllers -->
     <script type="text/javascript" src='static/app/controllers/homeController.js'></script>
 
+    <!-- services -->
+    <script type="text/javascript" src='static/app/services/timeService.js'></script>
+
     <!-- css -->
     <link href="static/app/css/style.css" rel="stylesheet" />
 
