--- a/server/views/partial/home.html
+++ b/server/views/partial/home.html
@@ -1,5 +1,5 @@
 <div class="page-header">
-    <h1>YouTube Search <small>A better search is all</small></h1>
+    <h1>YouTube Search <small>Better is all</small></h1>
 </div>
 
 <div id="input-container" class="row">
