--- a/server/views/index.html
+++ b/server/views/index.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src='static/app/services/timeService.js'></script>
 
     <!-- css -->
-    <link href="static/app/css/style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
 
 
     <base href="/" />
