duration filter placeholders

--- a/server/views/partial/home.html
+++ b/server/views/partial/home.html
@@ -52,8 +52,8 @@
 
                 <div id="durationContainer">
                     <div id="durationFilterHeader"><span class="glyphicon glyphicon-time"></span>Duration</div>
-                    <input ng-model="longerThanFilter" type="text" class="form-control" placeholder="Greater than (mins)" ng-keyup="filter()"/>
-                    <input ng-model="lessThanFilter" type="text" class="form-control" placeholder="Less than (mins)" ng-keyup="filter()" />
+                    <input ng-model="longerThanFilter" type="text" class="form-control" placeholder="> (mins)" ng-keyup="filter()"/>
+                    <input ng-model="lessThanFilter" type="text" class="form-control" placeholder="< (mins)" ng-keyup="filter()" />
                 </div>
             </div>
         </div>
