--- a/server/views/index.html
+++ b/server/views/index.html
@@ -11,7 +11,10 @@
     <script type="text/javascript" src='bower/angular-ui-router/release/angular-ui-router.js'></script>
     <script type="text/javascript" src='bower/angular-route/angular-route.js'></script>
     <script type="text/javascript" src='bower/angular-resource/angular-resource.js'></script>
+    <script type="text/javascript" src='bower/angular-animate/angular-animate.js'></script>
+    <script type="text/javascript" src='bower/AngularJS-Toaster/toaster.js'></script>
     <link href="bower/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <link href="bower/AngularJS-Toaster/toaster.css" rel="stylesheet" />
 
     <!--app -->
     <script type="text/javascript" src='static/app/app.js'></script>
@@ -30,6 +33,7 @@
 </head>
 <body>
     <div ng-view></div>
+    <toaster-container></toaster-container>
 </body>
 </html>
 
