--- a/server/views/partial/home.html
+++ b/server/views/partial/home.html
@@ -1,10 +1,10 @@
-<div id="page-header" class="row">
+<div id="page-header" class="row text-center">
     <div id="title-text"><span id="you">You</span><span id="tube">Tube</span><span id="search"> Search Tool<span class="glyphicon glyphicon-wrench"></span></span></div>
 </div>
 
 <div id="input-container" class="row">
 
-    <div id="textbox-container" class="form-group col-md-4">
+    <div id="textbox-container" class="form-group col-md-12">
         <form ng-submit="doSearch()">
             <div class="input-group">
                 <input class="form-control" type="text" ng-model="searchParam" placeholder="search term here..."  />
@@ -16,13 +16,13 @@
 </div>
 
 <div id="results-label-container" class="row" ng-if="searchResults.length > 0">
-    <div class="form-group col-md-4 text-center">
+    <div class="form-group col-md-12 text-center">
         <div id="search-results-header">Search results: <span id="totalResults">{{filteredResults.length}}</span></div>
     </div>
 </div>
 
 <div class="row">
-    <div id="sort-and-filter" class="col-md-4">
+    <div id="sort-and-filter" class="col-md-4 col-md-offset-4">
         <div id="sort-options-container" class="row">
             <div class="col-md-12 sort-filter-header">
                 <div class="sort-filter-header-content"><span class="glyphicon glyphicon-sort"></span>Sort</div>
