--- a/server/views/partial/home.html
+++ b/server/views/partial/home.html
@@ -69,7 +69,7 @@
 <!--ng-if="fetching"-->
 
 <div id="results" class="row" ng-if="searchResults.length > 0">
-    <div class="col-md-6">
+    <div class="col-md-8 col-md-offset-2 text-center">
         <table class="table">
             <tbody>
             <tr ng-repeat="video in filteredResults">
