meta tags / contact

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Youtube Search Tool</title>
 
+    <meta name="author" content="Lance Fallon">
+    <meta name="keywords" content="Youtube search tool" />
+    <meta name="description" content="Youtube search utility implementing YouTube API. Allows for precise filtering and sorting options that are not available through the native YouTube interface / website" />
+
     <!-- bower -->
     <script type="text/javascript" src='bower/jquery/dist/jquery.js'></script>
     <script type="text/javascript" src='bower/bootstrap/dist/js/bootstrap.js'></script>
@@ -34,6 +38,8 @@
 <body>
     <div ng-view></div>
     <toaster-container></toaster-container>
+    <hr />
+    <div class="text-right col-md-12"><a href="mailto:fallon.lance@gmail.com">Lance Fallon <span class="glyphicon glyphicon-envelope"></span></a></div>
 </body>
 </html>
 
