--- a/server/views/index.html
+++ b/server/views/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Youtube Search Tool</title>
-
+    
+    <meta name="google-site-verification" content="eo2O42c3mSdHPubU_RwH4HpiOvvvByOpdmNWy9NssJQ" />
     <meta name="author" content="Lance Fallon">
     <meta name="keywords" content="Youtube search tool" />
     <meta name="description" content="Youtube search utility implementing YouTube API. Allows for precise filtering and sorting options that are not available through the native YouTube interface / website" />
