--- a/server/views/index.html
+++ b/server/views/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Youtube Search Tool</title>
 
+    <link rel='shortcut icon' type='image/x-icon' href='static/favicon.ico' />
+
     <meta name="google-site-verification" content="eo2O42c3mSdHPubU_RwH4HpiOvvvByOpdmNWy9NssJQ" />
     <meta name="author" content="Lance Fallon">
     <meta name="keywords" content="Youtube search tool" />
