--- a/server/views/partial/home.html
+++ b/server/views/partial/home.html
@@ -7,7 +7,7 @@
     <div id="textbox-container" class="form-group col-md-12">
         <form ng-submit="doSearch()">
             <div class="input-group">
-                <input class="form-control" type="text" ng-model="searchParam" placeholder="search term here..."  />
+                <input class="form-control" type="text" ng-model="searchParam" placeholder="search term here..." autofocus />
                 <div id="searchButton" ng-if="!fetching" class="notta-button input-group-addon" ng-click="doSearch()"><span class="glyphicon glyphicon-search"></span>Search</div>
                 <div id="stopButton" ng-if="fetching" class="notta-button input-group-addon" ng-click="interrupt()"><span class="glyphicon glyphicon-stop"></span>Stop</div>
             </div>
@@ -86,7 +86,7 @@
                             <div class="videoTitle">{{video.title}}</div>
                         </a>
                         <div class="duration">{{video.duration}}</div>
-                        <div class="created">{{video.created | date:'MM-dd-yyyy'}}</div>
+                        <div class="created"><a href="https://www.youtube.com/channel/{{video.channelId}}" target="_blank">{{video.channelTitle}}</a> - {{video.created | date:'MM-dd-yyyy'}}</div>
                         <div class="rating"><small>Rating</small> {{video.pctLikes | number:2}}</div>
                         <div class="view-count"><small>Views</small> {{video.viewCount}}</div>
                         <div class="likes"><small>Likes</small> {{video.likes}}</div>
