--- a/server/views/index.html
+++ b/server/views/index.html
@@ -8,7 +8,7 @@
 
     <meta name="google-site-verification" content="eo2O42c3mSdHPubU_RwH4HpiOvvvByOpdmNWy9NssJQ" />
     <meta name="author" content="Lance Fallon">
-    <meta name="keywords" content="Youtube search tool" />
+    <meta name="keywords" content="Youtube search tool videos filtering searching filter search api" />
     <meta name="description" content="Youtube search utility implementing YouTube API. Allows for precise filtering and sorting options that are not available through the native YouTube interface / website" />
 
     <!-- bower -->
