youtube server side skeleton

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -29,7 +29,7 @@
     <!-- controllers -->
     <script type="text/javascript" src='static/app/controllers/homeController.js'></script>
 
-    <!-- services -->
+    <!-- webservices -->
     <script type="text/javascript" src='static/app/services/timeService.js'></script>
 
     <!-- css -->
