--- a/server/views/index.html
+++ b/server/views/index.html
@@ -2,14 +2,14 @@
 <html lang="en" ng-app="youtubeSearchApp">
 <head>
     <meta charset="UTF-8">
-    <title>Youtube Search Tool</title>
+    <title>Youtube Sorting and Filtering - Search Optimization Made Easy</title>
 
     <link rel='shortcut icon' type='image/x-icon' href='static/favicon.ico' />
 
     <meta name="google-site-verification" content="eo2O42c3mSdHPubU_RwH4HpiOvvvByOpdmNWy9NssJQ" />
     <meta name="author" content="Lance Fallon">
-    <meta name="keywords" content="Youtube search tool videos filtering searching filter search api" />
-    <meta name="description" content="Youtube search utility implementing YouTube API. Allows for precise filtering and sorting options that are not available through the native YouTube interface / website" />
+    <meta name="keywords" content="Youtube Sorting And Filtering - Search Optimization Made Easy Youtube Advanced Search Engine" />
+    <meta name="description" content="Sort, Filter, and Optimize your youtube searches to return only the best results." />
 
     <!-- bower -->
     <script type="text/javascript" src='bower/jquery/dist/jquery.js'></script>
@@ -51,7 +51,11 @@
 
 </head>
 <body>
-    <div ng-view></div>
+<div id="page-header" class="row text-center">
+    <div id="title-text"><span id="you">You</span><span id="tube">Tube</span><span id="search"> Agent<span class="glyphicon glyphicon-wrench"></span></span></div>
+    <div class="text-center"><small>Youtube Sorting And Filtering - Easy to Use and Advanced Search Engine to Optimize YouTube Results</small></div>
+</div>
+<div ng-view></div>
     <toaster-container></toaster-container>
     <hr />
     <div class="text-right col-md-12"><a href="mailto:fallon.lance@gmail.com">Lance Fallon <span class="glyphicon glyphicon-envelope"></span></a></div>
