--- a/server/views/index.html
+++ b/server/views/index.html
@@ -52,7 +52,7 @@
 <body>
 <div id="page-header" class="row text-center">
     <div id="title-text"><span id="you">You</span><span id="tube">Tube</span><span id="search"> Agent<span class="glyphicon glyphicon-wrench"></span></span></div>
-    <div class="text-center"><small>Youtube Sorting and Filtering - Easy to Use and Advanced Search Engine to Optimize YouTube Results</small></div>
+    <div class="text-center"><small>YouTube Sorting and Filtering - Easy to Use and Advanced Search Engine to Optimize YouTube Results</small></div>
 </div>
 <div ng-view></div>
     <toaster-container></toaster-container>
