--- a/server/views/index.html
+++ b/server/views/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
 <div id="page-header" class="row text-center">
-    <div id="title-text"><span id="you">You</span><span id="tube">Tube</span><span id="search"> Agent<span class="glyphicon glyphicon-wrench"></span></span></div>
+    <div id="title-text"><span id="you">You</span><span id="tube">Tube</span><span id="search"> Agent</span></div>
     <div class="text-center"><small>YouTube Sorting and Filtering - Easy to Use and Advanced Search Engine to Optimize YouTube Results</small></div>
 </div>
 <div ng-view></div>
