--- a/server/views/partial/home.html
+++ b/server/views/partial/home.html
@@ -40,15 +40,15 @@
                     <input ng-model="minDislikes" type="number" class="form-control" ng-blur="filter()" placeholder="Maximum dislikes" />
                 </div>
                 <div id="minViewsContainer">
-                    <div id="minViewsHeader"><span class="glyphicon glyphicon-user"></span>MinViews</div>
+                    <div id="minViewsHeader"><span class="glyphicon glyphicon-user"></span>Min Views</div>
                     <input ng-model="minViews" type="number" class="form-control" ng-blur="filter()" placeholder="Minimum views" />
                 </div>
                 <div id="minRatingContainer">
-                    <div id="minRatingHeader"><span class="glyphicon glyphicon-star"></span>MinRating</div>
+                    <div id="minRatingHeader"><span class="glyphicon glyphicon-star"></span>Min Rating</div>
                     <input ng-model="minRating" type="number" class="form-control" ng-blur="filter()" placeholder="Minimum rating (0 to 100)" />
                 </div>
                 <div id="dateFilter">
-                    <div id="dateFilterHeader"><span class="glyphicon glyphicon-calendar"></span>Date</div>
+                    <div id="dateFilterHeader"><span class="glyphicon glyphicon-calendar"></span>Min Date</div>
                     <input type="date" ng-blur="filter()" class="form-control" ng-model="minDate" placeholder="Select earliest date" />
                 </div>
 
