shorten text box

--- a/server/views/partial/home.html
+++ b/server/views/partial/home.html
@@ -1,6 +1,6 @@
 <div id="input-container" class="row">
 
-    <div id="textbox-container" class="form-group col-md-12">
+    <div id="textbox-container" class="form-group col-md-8 col-md-offset-2">
         <form ng-submit="doSearch()">
             <div class="input-group">
                 <input class="form-control" type="text" ng-model="searchParam" placeholder="search term here..." autofocus />
