--- a/server/views/index.html
+++ b/server/views/index.html
@@ -27,6 +27,7 @@
 
     <!-- controllers -->
     <script type="text/javascript" src='static/app/controllers/homeController.js'></script>
+    <script type="text/javascript" src='static/app/controllers/authController.js'></script>
 
     <!-- webservices -->
     <script type="text/javascript" src='static/app/services/timeService.js'></script>
