--- a/server/views/partial/home.html
+++ b/server/views/partial/home.html
@@ -1,3 +1,4 @@
+<div class="btn btn-lg btn-primary" ng-click="authorize()">Authorize</div>
 <div id="input-container" class="row">
 
     <div id="textbox-container" class="form-group col-md-12">
