--- a/server/views/index.html
+++ b/server/views/index.html
@@ -29,8 +29,9 @@
     <script type="text/javascript" src='static/app/controllers/homeController.js'></script>
     <script type="text/javascript" src='static/app/controllers/authController.js'></script>
 
-    <!-- webservices -->
+    <!-- services -->
     <script type="text/javascript" src='static/app/services/timeService.js'></script>
+    <script type="text/javascript" src='static/app/services/authService.js'></script>
 
     <!-- css -->
     <link href="css/style.css" rel="stylesheet" />
@@ -54,6 +55,12 @@
 <div id="page-header" class="row text-center">
     <div id="title-text"><span id="you">You</span><span id="tube">Tube</span><span id="search"> Agent</span></div>
     <div class="text-center"><small>YouTube Sorting and Filtering - Easy to Use and Advanced Search Engine to Optimize YouTube Results</small></div>
+    <br />
+    <a href="https://accounts.google.com/o/oauth2/auth?client_id=613015363976-0aodg2ib3dmv8m2g7gmknnglg29cmir9.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauthcallback&scope=https://www.googleapis.com/auth/youtube https://www.googleapis.com/auth/youtubepartner&response_type=token" ng-if="!AuthService.isLoggedIn()" class="text-primary"><span class="glyphicon glyphicon-user"></span> Login with YouTube account</a>
+    <div ng-if="AuthService.isLoggedIn()">
+        <span class="glyphicon glyphicon-user"></span> Using webapp as {{AuthService.getAuth().user.name}}<br />
+        <a href="" ng-click="AuthService.logout()">Logout</a>
+    </div>
 </div>
 <div ng-view></div>
     <toaster-container></toaster-container>
